<resources>
    <string name="app_name">Tales of Symphonia</string>
    <string name="ToS">Tales of Symphonia</string>
    <string name="NewGame">Nouvelle partie</string>
    <string name="Continue">Continuer la partie</string>
    <string name="Codex">Codex</string>
    <string name="Crédits">Crédits</string>
    <string name="options">Options</string>
    <string name="message1">Vous avez enfin atteint la ville de Symphonia\n Ses lourdes portes s\'ouvre pour laisser passer votre convoi.Le chef du convoi vient vous voir et vous tends une bourser rempli d\'or \'Vous avez accompli votre part. Profitez en bien !\' Il retourne ensuite à son convoi sans plus de cérémonie. Qu\'allez donc vous faire aventurier ?</string>
    <string name="partie1">Vous éprouvez un soulagement en apercevant les premières habitations, la route a été longue mais finalement vous arrivez enfin en vue de Symphonia.\n La muraille de pierre de la capitale d’Alysia vous surplombe tandis que vous continuez d’escortez le convoi de marchand.\nÀ la suite de certains problèmes vous avez dû quitter précipitamment le royaume elfe et cacher votre identité.\nVous faire embaucher par des marchands qui avait besoin de protection était une bonne idée et vous a mené jusqu’ici.\nD’un rapide mouvement de main vous vous assurez que votre capuche cache toujours vos oreilles pointues, votre deuxième main ne quitte pas votre arc, une des seules reliques de votre ancienne vie.\nSymphonia est réputé pour être une des rares villes à ne pas interdire son accès aux différentes races.\nLes nains, elfes, humains, orcs peuvent y vivre, en théorie, sans problèmes.\nCependant votre instinct vous conseille de ne pas retirer votre capuche et de continuer de faire profil bas.\nVotre convoi est arrêté aux portes de la ville et tandis que les gardes l’inspecte le chef des marchands vient vous voir : « Merci encore de nous avoir sauvé de ces bandits. Comme promis votre récompense. Au plaisir de vous revoir l’archer » Vous glissez rapidement la bourse pleine de pièce d’or sous votre cape. Ce petit pécule vous offre de quoi vivre pendant quelques temps mais vous savez qu’en tant que mercenaire vous allez vite devoir retrouver quelqu’un pour qui travailler. Votre regard perçant d’elfe ne peut rater la tour des mages, le plus grand bâtiment de la ville, mais vous ne pensez pas qu’un archer elfe pourrait y avoir sa place. Vous vous rabattez sur une taverne dans un quartier plutôt aisée. L’odeur de bière fraiche et le brouhaha vous accueille lorsque vous franchissez le seuil. Deux personnes attirent votre regard assez vite : -Un nain avec des dès taillé dans l’os semblant chercher un partenaire de jeu -Un garde, du moins c’est ce que laisse penser sa tenue, semble avoir abusé de la boisson et est à moitié affalé sur le comptoir Les autres clients vous semblent juste être des artisans, plus ou moins fortunés, profitant de cette fin de journée autour d’une boisson. Vous pourriez aussi simplement allez commander de quoi vous sustenter</string>
    <string name="aide">Aide</string>
    <string name="credits">CREDITS\n J\'aimerais remercier tous ceux qui ont permis la réalisation de ce projet\n Les images utilisées lors du projet et la modélisation appartiennent respectivement à :\n  Sword by Christian Mohr from the Noun Project\n Bow by Arthur Shlain from the Noun Project\n Gear by Siraj C from the Noun Project\n Arrow by Adrien Coquet from the Noun Project\n Backpack by Souvik Bhattacharjee from the Noun Project\n Potion by Andrejs Kirma from the Noun Project\n Ring by Royyan Wijaya from the Noun Project\n User by Kimmi Studio from the Noun Project\n groups by Rohith M S from the Noun Project\n  Des remerciements particuliers aux membres de RPitech sans qui ce jeu n\'aurais jamais vu le jour.\n  Ainsi qu\'évidemment à vous joueur/joueuse !</string>
    <string name="go_back_to_the_main_menu">Go back to the main menu</string>
    <string name="votre_inventaire">Votre inventaire :</string>
</resources>
