<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ecran_accueil"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FAFA">

    <LinearLayout
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:background="@drawable/ic_action_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ToS"
            android:textSize="40sp"
            android:textStyle="italic|bold" />
    </LinearLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titre"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/new_game"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/NewGame"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/continue_game"
                android:layout_width="250dp"
                android:layout_height="65dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/Continue"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_marginBottom="10dp" />

            <Button
                android:id="@+id/help"
                android:layout_width="250dp"
                android:layout_height="65dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/aide"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_marginBottom="10dp" />

            <Button
                android:id="@+id/codex"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/Codex"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:text="@string/Crédits"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:layout_marginBottom="10dp"/>
            <Button
                android:id="@+id/options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonshape"
                android:shadowColor="#A8A8A8"
                android:text="@string/options"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

